--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -35,12 +35,12 @@
     <feature name="Vibration">
         <param name="android-package" value="org.apache.cordova.vibration.Vibration" />
     </feature>
-    <name>helloworld</name>
+    <name>KriolNews</name>
     <description>
-        Hello World sample application that responds to the deviceready event.
+       KriolNews | Encontre o resumo das noticias mais recentes.
     </description>
-    <author email="support@phonegap.com" href="http://phonegap.com">
-        PhoneGap Team
+    <author email="ailsonesi96@gmail.com" href="https://www.linkedin.com/in/ailson-moreira-340b40161/">
+        SmallKode Team
     </author>
     <content src="index.html" />
     <access origin="*" />
@@ -50,24 +50,24 @@
     <allow-intent href="sms:*" />
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
-    <icon density="ldpi" src="www/res/icon/android/drawable-ldpi-icon.png" />
-    <icon density="mdpi" src="www/res/icon/android/drawable-mdpi-icon.png" />
-    <icon density="hdpi" src="www/res/icon/android/drawable-hdpi-icon.png" />
-    <icon density="xhdpi" src="www/res/icon/android/drawable-xhdpi-icon.png" />
-    <icon density="xxhdpi" src="www/res/icon/android/drawable-xxhdpi-icon.png" />
-    <icon density="xxxhdpi" src="www/res/icon/android/drawable-xxxhdpi-icon.png" />
-    <splash density="land-ldpi" src="www/res/screen/android/drawable-land-ldpi-screen.png" />
-    <splash density="land-mdpi" src="www/res/screen/android/drawable-land-mdpi-screen.png" />
-    <splash density="land-hdpi" src="www/res/screen/android/drawable-land-hdpi-screen.png" />
-    <splash density="land-xhdpi" src="www/res/screen/android/drawable-land-xhdpi-screen.png" />
-    <splash density="land-xxhdpi" src="www/res/screen/android/drawable-land-xxhdpi-screen.png" />
-    <splash density="land-xxxhdpi" src="www/res/screen/android/drawable-land-xxxhdpi-screen.png" />
-    <splash density="port-ldpi" src="www/res/screen/android/drawable-port-ldpi-screen.png" />
-    <splash density="port-mdpi" src="www/res/screen/android/drawable-port-mdpi-screen.png" />
-    <splash density="port-hdpi" src="www/res/screen/android/drawable-port-hdpi-screen.png" />
-    <splash density="port-xhdpi" src="www/res/screen/android/drawable-port-xhdpi-screen.png" />
-    <splash density="port-xxhdpi" src="www/res/screen/android/drawable-port-xxhdpi-screen.png" />
-    <splash density="port-xxxhdpi" src="www/res/screen/android/drawable-port-xxxhdpi-screen.png" />
+    <icon density="ldpi" src="www/res/android/icon/icon.png" />
+    <icon density="mdpi" src="www/res/icon/android/icon.png" />
+    <icon density="hdpi" src="www/res/icon/android/icon.png" />
+    <icon density="xhdpi" src="www/res/icon/android/icon.png" />
+    <icon density="xxhdpi" src="www/res/icon/android/icon.png" />
+    <icon density="xxxhdpi" src="www/res/icon/android/icon.png" />
+    <splash density="land-ldpi" src="www/res/icon/android/icon.png" />
+    <splash density="land-mdpi" src="www/res/icon/android/icon.png" />
+    <splash density="land-hdpi" src="www/res/icon/android/icon.png" />
+    <splash density="land-xhdpi" src="www/res/icon/android/icon.png" />
+    <splash density="land-xxhdpi" src="www/res/icon/android/icon.png" />
+    <splash density="land-xxxhdpi" src="www/res/icon/android/icon.png" />
+    <splash density="port-ldpi" src="www/res/icon/android/icon.png" />
+    <splash density="port-mdpi" src="www/res/icon/android/icon.png" />
+    <splash density="port-hdpi" src="www/res/icon/android/icon.png" />
+    <splash density="port-xhdpi" src="www/res/icon/android/icon.png" />
+    <splash density="port-xxhdpi" src="www/res/icon/android/icon.png" />
+    <splash density="port-xxxhdpi" src="www/res/icon/android/icon.png" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
     <preference name="DisallowOverscroll" value="true" />
